--- a/src/main/webapp/WEB-INF/view/demo/include/header.html
+++ b/src/main/webapp/WEB-INF/view/demo/include/header.html
@@ -13,6 +13,7 @@
 <meta http-equiv="description" content="This is my page">
 <link href="resources/css/style.css" rel="stylesheet" type="text/css">
 <script src="resources/js/jquery/jquery-3.0.0.js"></script>
+<script src="lib/json2.js"></script>
 </head>
 <body>
 	<header id="header">
