--- a/src/main/webapp/WEB-INF/view/demo/index.html
+++ b/src/main/webapp/WEB-INF/view/demo/index.html
@@ -49,6 +49,7 @@
 	</div>
 	<h1 class="module">改</h1>
     <div id="update" class="content" style="margin-top:-40px">
+        <p>太懒了不弄了</p>
     </div>
 </div>
 
