--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -14,10 +14,12 @@
 				<td><input type="password" name="password" /></td>
 			</tr>
 			<tr>
-				<td colspan="2" align="center">
-				    <input type="submit" value=" 登录 " />
-				    <input type="reset" value=" 重置 " />
-				</td>
+				<td><input name="remember_me" type="checkbox" /></td>
+				<td>Remember Me</td>
+			</tr>
+			<tr>
+				<td colspan="2" align="center"><input type="submit"
+					value=" 登录 " /> <input type="reset" value=" 重置 " /></td>
 			</tr>
 		</table>
 	</form>
