[IMP] 正式加入权限控制;加入登录成功和失败的处理

--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -3,6 +3,8 @@
 <head></head>
 <body>
 
+	<h1>Login</h1>
+
 	<form action="login" method="post">
 		<table>
 			<tr>
@@ -14,7 +16,8 @@
 				<td><input type="password" name="password" /></td>
 			</tr>
 			<tr>
-				<td><input name="remember_me" type="checkbox" /></td>
+				<td style="text-align: right;"><input name="remember-me"
+					type="checkbox" /></td>
 				<td>Remember Me</td>
 			</tr>
 			<tr>
