[IMP] 重写user整个模块并加入密码加密;重写认证失败处理类

--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -22,7 +22,7 @@
 				<td><input type="password" name="password" /></td>
 			</tr>
 			<tr>
-				<td style="text-align: right;"><input name="remember-me"
+				<td style="text-align: right;"><input name="rmmbrm-hoshi"
 					type="checkbox" /></td>
 				<td>Remember Me</td>
 			</tr>
